--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="css/index.css" type="text/css" />
 </head>
 <body>
-    
+    <h1>The result:</h1>
     <script  src="js/index.js"></script>
 </body>
 </html>
